--- a/SisFiespApplication/Views/Shared/_Layout.cshtml
+++ b/SisFiespApplication/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
     <!-- Google font-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800" rel="stylesheet">
     <!-- Required Fremwork -->
-    <link rel="stylesheet" type="text/css" href="~/bower_components/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="~/arquivos/bootstrap/css/bootstrap.min.css">
     <!-- themify-icons line icon -->
     <link rel="stylesheet" type="text/css" href="~/assets/icon/themify-icons/themify-icons.css">
     <!-- ico font -->
@@ -37,33 +37,33 @@
     <!-- Time line css -->
     <link rel="stylesheet" type="text/css" href="~/assets/pages/timeline/style.css">
     <!-- Chartlist chart css -->
-    <link rel="stylesheet" href="~/bower_components/chartist/css/chartist.css" type="text/css" media="all">
+    <link rel="stylesheet" href="~/arquivos/chartist/css/chartist.css" type="text/css" media="all">
     <!-- C3 chart -->
-    <link rel="stylesheet" href="~/bower_components/c3/css/c3.css" type="text/css" media="all">
+    <link rel="stylesheet" href="~/arquivos/c3/css/c3.css" type="text/css" media="all">
     <!-- Switch component css -->
-    <link rel="stylesheet" type="text/css" href="../bower_components/switchery/css/switchery.min.css">
+    <link rel="stylesheet" type="text/css" href="../arquivos/switchery/css/switchery.min.css">
     <!-- Tags css -->
-    <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap-tagsinput/css/bootstrap-tagsinput.css" />
+    <link rel="stylesheet" type="text/css" href="../arquivos/bootstrap-tagsinput/css/bootstrap-tagsinput.css" />
     <!-- Style.css -->
     <link rel="stylesheet" type="text/css" href="~/assets/css/style.css">
 
     <link rel="stylesheet" type="text/css" href="~/assets/css/jquery.mCustomScrollbar.css">
 
     <!-- Data Table Css -->
-    <link rel="stylesheet" type="text/css" href="~/bower_components/datatables.net-bs4/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" type="text/css" href="~/arquivos/datatables.net-bs4/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" type="text/css" href="~/assets/pages/data-table/css/buttons.dataTables.min.css">
-    <link rel="stylesheet" type="text/css" href="~/bower_components/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css">
+    <link rel="stylesheet" type="text/css" href="~/arquivos/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css">
 
     <!-- Required Jquery -->
-    <script type="text/javascript" src="~/bower_components/jquery/js/jquery.min.js"></script>
-    <script type="text/javascript" src="~/bower_components/jquery-ui/js/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="~/bower_components/popper.js/js/popper.min.js"></script>
-    <script type="text/javascript" src="~/bower_components/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="~/arquivos/jquery/js/jquery.min.js"></script>
+    <script type="text/javascript" src="~/arquivos/jquery-ui/js/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="~/arquivos/popper.js/js/popper.min.js"></script>
+    <script type="text/javascript" src="~/arquivos/bootstrap/js/bootstrap.min.js"></script>
     <!-- jquery slimscroll js -->
-    <script type="text/javascript" src="~/bower_components/jquery-slimscroll/js/jquery.slimscroll.js"></script>
+    <script type="text/javascript" src="~/arquivos/jquery-slimscroll/js/jquery.slimscroll.js"></script>
     <!-- modernizr js -->
-    <script type="text/javascript" src="~/bower_components/modernizr/js/modernizr.js"></script>
-    <script type="text/javascript" src="~/bower_components/modernizr/js/css-scrollbars.js"></script>
+    <script type="text/javascript" src="~/arquivos/modernizr/js/modernizr.js"></script>
+    <script type="text/javascript" src="~/arquivos/modernizr/js/css-scrollbars.js"></script>
 
     <!-- Todo js -->
     <script type="text/javascript" src="~/assets/pages/todo/todo.js"></script>
@@ -76,24 +76,24 @@
     <script src="~/assets/pages/widget/amchart/serial.js"></script>
     <script src="~/assets/pages/widget/amchart/light.js"></script>
     <!-- peity Chart js -->
-    <script src="~/bower_components/peity/js/jquery.peity.js "></script>
+    <script src="~/arquivos/peity/js/jquery.peity.js "></script>
 
     <!-- Chartlist charts -->
-    <script src="~/bower_components/chartist/js/chartist.js "></script>
+    <script src="~/arquivos/chartist/js/chartist.js "></script>
     <script src="~/assets/pages/chart/chartlist/js/chartist-plugin-threshold.js "></script>
     <script src="~/assets/pages/chart/chartlist/js/chartist-plugin-tooltip.min.js "></script>
     <!-- c3 chart js -->
-    <script src="~/bower_components/d3/js/d3.min.js"></script>
-    <script src="~/bower_components/c3/js/c3.js"></script>
+    <script src="~/arquivos/d3/js/d3.min.js"></script>
+    <script src="~/arquivos/c3/js/c3.js"></script>
     <!-- Chart js -->
-    <script type="text/javascript" src="~/bower_components/chart.js/js/Chart.js"></script>
+    <script type="text/javascript" src="~/arquivos/chart.js/js/Chart.js"></script>
     <!-- i18next.min.js -->
-    <script type="text/javascript" src="~/bower_components/i18next/js/i18next.min.js"></script>
-    <script type="text/javascript" src="~/bower_components/i18next-xhr-backend/js/i18nextXHRBackend.min.js"></script>
-    <script type="text/javascript" src="~/bower_components/i18next-browser-languagedetector/js/i18nextBrowserLanguageDetector.min.js"></script>
-    <script type="text/javascript" src="~/bower_components/jquery-i18next/js/jquery-i18next.min.js"></script>
+    <script type="text/javascript" src="~/arquivos/i18next/js/i18next.min.js"></script>
+    <script type="text/javascript" src="~/arquivos/i18next-xhr-backend/js/i18nextXHRBackend.min.js"></script>
+    <script type="text/javascript" src="~/arquivos/i18next-browser-languagedetector/js/i18nextBrowserLanguageDetector.min.js"></script>
+    <script type="text/javascript" src="~/arquivos/jquery-i18next/js/jquery-i18next.min.js"></script>
     <!-- Max-length js -->
-    <script type="text/javascript" src="~/bower_components/bootstrap-maxlength/js/bootstrap-maxlength.js"></script>
+    <script type="text/javascript" src="~/arquivos/bootstrap-maxlength/js/bootstrap-maxlength.js"></script>
 
 </head>
 
@@ -517,16 +517,16 @@
     <script src="~/assets/pages/data-table/js/data-table-custom.js"></script>
 
     <!-- data-table js -->
-    <script src="~/bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
-    <script src="~/bower_components/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
+    <script src="~/arquivos/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="~/arquivos/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
     <script src="~/assets/pages/data-table/js/jszip.min.js"></script>
     <script src="~/assets/pages/data-table/js/pdfmake.min.js"></script>
     <script src="~/assets/pages/data-table/js/vfs_fonts.js"></script>
-    <script src="~/bower_components/datatables.net-buttons/js/buttons.print.min.js"></script>
-    <script src="~/bower_components/datatables.net-buttons/js/buttons.html5.min.js"></script>
-    <script src="~/bower_components/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/bower_components/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
-    <script src="~/bower_components/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
+    <script src="~/arquivos/datatables.net-buttons/js/buttons.print.min.js"></script>
+    <script src="~/arquivos/datatables.net-buttons/js/buttons.html5.min.js"></script>
+    <script src="~/arquivos/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+    <script src="~/arquivos/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
+    <script src="~/arquivos/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
 
     <!-- Masking js -->
     <script src="~/assets/pages/form-masking/inputmask.js"></script>
