--- a/SisFiespApplication/Views/Login/Index.cshtml
+++ b/SisFiespApplication/Views/Login/Index.cshtml
@@ -17,7 +17,7 @@
         <!-- Google font-->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800" rel="stylesheet">
         <!-- Required Fremwork -->
-        <link rel="stylesheet" type="text/css" href="~/bower_components/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="~/arquivos/bootstrap/css/bootstrap.min.css">
         <!-- themify-icons line icon -->
         <link rel="stylesheet" type="text/css" href="~/assets/icon/themify-icons/themify-icons.css">
         <!-- ico font -->
@@ -131,20 +131,20 @@
         @*<script src="~/lib/jquery/dist/jquery.min.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>*@
 
-        <script  src="~/bower_components/jquery/js/jquery.min.js"></script>
-        <script  src="~/bower_components/jquery-ui/js/jquery-ui.min.js"></script>
-        <script  src="~/bower_components/popper.js/js/popper.min.js"></script>
-        <script  src="~/bower_components/bootstrap/js/bootstrap.min.js"></script>
+        <script  src="~/arquivos/jquery/js/jquery.min.js"></script>
+        <script  src="~/arquivos/jquery-ui/js/jquery-ui.min.js"></script>
+        <script  src="~/arquivos/popper.js/js/popper.min.js"></script>
+        <script  src="~/arquivos/bootstrap/js/bootstrap.min.js"></script>
         <!-- jquery slimscroll js -->
-        <script  src="~/bower_components/jquery-slimscroll/js/jquery.slimscroll.js"></script>
+        <script  src="~/arquivos/jquery-slimscroll/js/jquery.slimscroll.js"></script>
         <!-- modernizr js -->
-        <script  src="~/bower_components/modernizr/js/modernizr.js"></script>
-        <script  src="~/bower_components/modernizr/js/css-scrollbars.js"></script>
+        <script  src="~/arquivos/modernizr/js/modernizr.js"></script>
+        <script  src="~/arquivos/modernizr/js/css-scrollbars.js"></script>
         <!-- i18next.min.js -->
-        <script  src="~/bower_components/i18next/js/i18next.min.js"></script>
-        <script  src="~/bower_components/i18next-xhr-backend/js/i18nextXHRBackend.min.js"></script>
-        <script  src="~/bower_components/i18next-browser-languagedetector/js/i18nextBrowserLanguageDetector.min.js"></script>
-        <script  src="~/bower_components/jquery-i18next/js/jquery-i18next.min.js"></script>
+        <script  src="~/arquivos/i18next/js/i18next.min.js"></script>
+        <script  src="~/arquivos/i18next-xhr-backend/js/i18nextXHRBackend.min.js"></script>
+        <script  src="~/arquivos/i18next-browser-languagedetector/js/i18nextBrowserLanguageDetector.min.js"></script>
+        <script  src="~/arquivos/jquery-i18next/js/jquery-i18next.min.js"></script>
         <script  src="~/assets/js/common-pages.js"></script>
 
     </body>
