--- a/SisFiespApplication/Views/Shared/_Layout.cshtml
+++ b/SisFiespApplication/Views/Shared/_Layout.cshtml
@@ -476,7 +476,7 @@
                             </div>
                             <div class="pcoded-navigatio-lavel" data-i18n="nav.category.navigation">Menu</div>
                             <ul class="pcoded-item pcoded-left-item" style="position: relative; top: 0px; left: 0px; width: 270px;">
-                                <li class="">    <a href="index.html">        <span class="pcoded-micon"><i class="ti-home"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Dashboard</span>        <span class="pcoded-mcaret"></span>    </a></li>
+                                <li class="">    <a asp-area="" asp-controller="Home" asp-action="Index" id="menuEscola">        <span class="pcoded-micon"><i class="ti-home"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Dashboard</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                 <li class="pcoded-hasmenu">
                                     <a href="javascript:void(0)">
                                         <span class="pcoded-micon">
@@ -542,13 +542,13 @@
     <script type="text/javascript" src="~/assets/js/script.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/usuario.js" asp-append-version="true"></script>
-    <script src="~/js/escola.js" asp-append-version="true"></script>
-    <script src="~/js/aluno.js" asp-append-version="true"></script>
-    <script src="~/js/diagnostico.js" asp-append-version="true"></script>
-    <script src="~/js/modalidade.js" asp-append-version="true"></script>
-    <script src="~/js/avaliacao.js" asp-append-version="true"></script>
+    <script src="~/jsView/site.js" asp-append-version="true"></script>
+    <script src="~/jsView/usuario.js" asp-append-version="true"></script>
+    <script src="~/jsView/escola.js" asp-append-version="true"></script>
+    <script src="~/jsView/aluno.js" asp-append-version="true"></script>
+    <script src="~/jsView/diagnostico.js" asp-append-version="true"></script>
+    <script src="~/jsView/modalidade.js" asp-append-version="true"></script>
+    <script src="~/jsView/avaliacao.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 
 </body>
